<resources>
    <string name="app_name">EcoSemente</string>
    <string name="btn_seed">Seed</string>
    <string name="btn_buyer">Buyer</string>
    <string name="btn_sale">Sale</string>
    <string name="seedName">Seed Name</string>
    <string name="quantity">Quantity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_bottom_bar_home">Home</string>
    <string name="menu_bottom_bar_search">Search</string>
    <string name="menu_bottom_bar_report">Report</string>
    <string name="menu_bottom_bar_account">Account</string>
    <string name="seed_name">Seed\'s Name</string>
    <string name="tv_seed_list">Seed List</string>
    <string name="addSeed">Add Seed</string>
    <string name="seed_description">Seed\'s Description</string>
    <string name="species_seed">Seed\'s Species</string>
    <string name="planting_time">Planting Time</string>
    <string name="average_time">Average Time to Harvest</string>
    <string name="care">Care</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_clean">Clean</string>
    <string name="btn_delete">Delete</string>
    <string name="seedNameLabel">Seed:</string>
    <string name="seedQuantityLabel">Qty:</string>
    <string name="price">Price</string>
    <string name="PriceLabel">Price:</string>
    <string name="add_buyer">Add Buyer</string>
    <string name="buyerList">Buyer List</string>
    <string name="nameLabel">Name:</string>
    <string name="cpfCnpjLabel">CPF/CNPJ:</string>
    <string name="buyer_name">Buyer\'s Name</string>
    <string name="cpf_cnpj">CPF/CNPJ</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="sales_list">Sales List</string>
    <string name="add_sale">Add Sale</string>
    <string name="buyerLabel">Buyer:</string>
    <string name="dateLabel">Date:</string>
    <string name="valueLabel">Value:</string>
    <string name="addSale">Add Sale</string>
    <string name="addItem">+ Add Item</string>
    <string name="totalPriceLabel">Total Price:</string>
    <string name="select_seed">Select a Seed</string>
    <string name="select_buyer">Select a Buyer</string>
    <string name="btnCancelarVenda">Cancel Sale</string>
    <string name="Scientific_names">Scientific names</string>
</resources>