<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetalheCompradorActivity">
    <TextView
        android:id="@+id/tv_add_comprador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:text="@string/addSeed"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/svDetalheComprador"
        android:layout_width="379dp"
        android:layout_height="654dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_comprador">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etDetalheCompradorNomeComprador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/buyer_name"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/green" />

            <EditText
                android:id="@+id/etDetalheCompradorCpfCnpjComprador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/cpf_cnpj"
                android:inputType="number"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/green" />

            <EditText
                android:id="@+id/etDetalheCompradorTelefoneComprador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/phone"
                android:inputType="number"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/green" />

            <EditText
                android:id="@+id/etDetalheCompradorEmailComprador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/email"
                android:inputType="text|textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/green" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="128dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLimparComprador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/background_button"
                    android:text="@string/btn_clean"
                    android:textColor="@color/green" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnDeletarComprador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/background_button"
                    android:text="@string/btn_delete"
                    android:textColor="@color/green" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnConfirmarComprador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/background_button"
                    android:text="@string/btn_confirm"
                    android:textColor="@color/green" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/pbDetalheComprador"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>