<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetalheVendaActivity">
    <TextView
        android:id="@+id/tv_add_venda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:text="@string/add_sale"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/svDetalheVenda"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_venda">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_detalhaVendaComprador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_shape"
                android:padding="12dp"
                android:textColor="@color/green"/>

            <Spinner
                android:id="@+id/spinnerCompradores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/background_button"
                android:padding="12dp"
                android:textAlignment="viewStart"
                android:prompt="@string/select_buyer"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewItemVenda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddItem"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="16dp"
                android:background="@drawable/background_button"
                android:text="@string/addItem"
                android:textColor="@color/green" />
            <TextView
                android:id="@+id/tv_detalhaVendaValorTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/edit_text_shape"
                android:padding="12dp"
                android:text="@string/totalPriceLabel"
                android:textColor="@color/green"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancelaVenda"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/background_button"
                    android:text="@string/btnCancelarVenda"
                    android:textColor="@color/green" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnDeletarVenda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/background_button"
                    android:text="@string/btn_delete"
                    android:textColor="@color/green" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnConfirmarVenda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/background_button"
                    android:text="@string/btn_confirm"
                    android:textColor="@color/green" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/pbDetalheVenda"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>